# mlsh

./: .gitignore  Cargo.toml  LICENSE-AGPL  LICENSE-MIT  Makefile  README.md  index.html  install.mlsh.sh  install.ps1  install.sh  openapi.json  versions.json
.github/workflows/: docs.yml  mlsh-cli.yml  mlsh-release.yml  mlsh-signal.yml
diagrams/: mesh-quic-vs-ice.md
docs/: .gitignore  Containerfile  README.md  config.toml
docs/content/: _index.md
docs/sass/: style.scss
docs/scripts/: gen-versions.py
docs/templates/: base.html  index.html  page.html  section.html
installer/linux/: build-deb.sh  build-rpm.sh  mlsh-cloud-pubkey.pem  mlshtund.service
installer/macos/: build-pkg.sh
installer/windows/: .gitignore  mlsh.iss
mlsh-cli/: Cargo.toml  build.rs  mlsh-cloud-pubkey.pem
mlsh-cli/src/: cloud.rs  config.rs  lib.rs  main.rs  output.rs
mlsh-cli/src/commands/: adopt.rs  bootstrap.rs  connect.rs  control.rs  control_client.rs  daemon.rs  expose.rs  identity.rs  invite.rs  mod.rs  nodes.rs  promote.rs  rename.rs  revoke.rs  setup.rs  ui.rs
mlsh-cli/src/control/: db.rs  events.rs  first_admin.rs  mod.rs  mode.rs  nodes.rs  server.rs  stream.rs  tls.rs  users.rs
mlsh-cli/src/control/api/: auth.rs  cluster.rs  health.rs  invites.rs  mod.rs  nodes.rs  openapi.rs  test_harness.rs  users.rs
mlsh-cli/src/control/auth/: caller.rs  crypto.rs  handlers.rs  mod.rs  mtls_acceptor.rs  oauth.rs  session.rs  store.rs  totp.rs  webauthn.rs
mlsh-cli/src/export-openapi/: export_openapi.rs
mlsh-cli/src/quic/: client.rs  mod.rs  setup_client.rs  verifier.rs
mlsh-cli/src/tund/: acme.rs  admin_tunnel.rs  client.rs  cluster_config.rs  control.rs  control_child.rs  control_session.rs  daemon.rs  dns.rs  endpoint_migrate.rs  ingress.rs  manager_handle.rs  mod.rs  net_filter.rs  net_watcher.rs  overlay_dns.rs  peer_fsm.rs  peer_fsm_driver.rs  peer_supervisor.rs  peer_table.rs  probe.rs  protocol.rs  quic_client.rs  quic_server.rs  relay.rs  relay_handler.rs  relay_initiator.rs  relay_tls.rs  routes.rs  service_windows.rs  signal_session.rs  tunnel.rs  tunnel_manager.rs
mlsh-cli/src/tund/control/: client.rs  display_names.rs  mod.rs  protocol.rs  session.rs
mlsh-cli/src/tund/net/: dns.rs  filter.rs  mod.rs  overlay_dns.rs  routes.rs  watcher.rs
mlsh-cli/src/tund/overlay/: fsm.rs  mod.rs  peer_table.rs  probe.rs  quic.rs  relay.rs  supervisor.rs
mlsh-cli/src/tund/transport/: mod.rs  unix.rs  windows.rs
mlsh-cli/ui/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
mlsh-cli/ui/src/: App.vue  main.ts
mlsh-cli/ui/src/api/: client.ts  types.ts
mlsh-cli/ui/src/assets/styles/: base.css  tokens.css
mlsh-cli/ui/src/components/: AppShell.vue  BrandMark.vue  Btn.vue  SideNav.vue  StatBlock.vue  StatusDot.vue  ThemeToggle.vue  TopBar.vue
mlsh-cli/ui/src/composables/: useCluster.ts  useDrawer.ts  useNodes.ts  useSession.ts  useTheme.ts
mlsh-cli/ui/src/router/: index.ts
mlsh-cli/ui/src/views/: AccountView.vue  BootstrapView.vue  LoginView.vue  NodesView.vue  PreferencesView.vue  UsersView.vue
mlsh-crypto/: Cargo.toml
mlsh-crypto/src/: identity.rs  invite.rs  lib.rs  setup.rs
mlsh-menubar/: Info.plist  Package.swift
mlsh-menubar/Resources/: AppIcon.icns
mlsh-protocol/: Cargo.toml
mlsh-protocol/src/: alpn.rs  control.rs  framing.rs  lib.rs  messages.rs  types.rs
mlsh-signal/: Cargo.toml  Containerfile  db
mlsh-signal/src/: acme_http.rs  acme_tls.rs  cluster.rs  config.rs  db.rs  dns.rs  http.rs  ingress.rs  lib.rs  main.rs  metrics.rs  probe.rs  protocol.rs  sessions.rs
mlsh-signal/src/quic/: alpn.rs  control_relay.rs  listener.rs  mod.rs  relay.rs  session.rs  tls.rs
mlsh-systray/: .gitignore  CMakeLists.txt  README.md
mlsh-systray/licenses/: Qt-NOTICE.txt
mlsh-systray/resources/: app.rc  generate-icon.ps1
mlsh-systray/src/: App.cpp  App.h  main.cpp
mlsh-systray/src/cli/: CliRunner.cpp  CliRunner.h
mlsh-systray/src/config/: ClusterDiscovery.cpp  ClusterDiscovery.h
mlsh-systray/src/ipc/: DaemonClient.cpp  DaemonClient.h  Protocol.cpp  Protocol.h
mlsh-systray/src/model/: AppState.cpp  AppState.h  NodeInfo.h  TunnelStatus.h
mlsh-systray/src/service/: ServiceController.cpp  ServiceController.h
mlsh-systray/src/ui/: AdoptDialog.cpp  AdoptDialog.h  CreateTunnelDialog.cpp  CreateTunnelDialog.h  Formatting.cpp  Formatting.h  IconFactory.cpp  IconFactory.h  InviteDialog.cpp  InviteDialog.h  MainWindow.cpp  MainWindow.h  NodesDialog.cpp  NodesDialog.h  Theme.h  TrayIcon.cpp  TrayIcon.h  TunnelRow.cpp  TunnelRow.h
mlsh-systray/src/update/: UpdateChecker.cpp  UpdateChecker.h
tests/e2e/mlsh-e2e/: Cargo.toml
tests/e2e/mlsh-e2e/examples/: boot_alpine.rs
tests/e2e/mlsh-e2e/src/: lib.rs  manifest.rs
tests/e2e/mlsh-e2e/src/backend/: krunkit.rs  mod.rs  qemu.rs
v0.0.11/: index.html  robots.txt  sitemap.xml
v0.0.11/cli/: index.html
v0.0.11/getting-started/: index.html
v0.0.11/networking/: index.html
v0.0.11/pagefind/: pagefind.en_fa3ebf0d7c.pf_meta
v0.0.11/security/: index.html
v0.0.11/signal-server/: index.html
v0.0.11/troubleshooting/: index.html
v0.0.12/: index.html  robots.txt  sitemap.xml  tokens.css
v0.0.12/cli/: index.html
v0.0.12/getting-started/: index.html
v0.0.12/networking/: index.html
v0.0.12/pagefind/: pagefind-entry.json
v0.0.12/security/: index.html
v0.0.13/: index.html  robots.txt  sitemap.xml
v0.1.0/: index.html  robots.txt  sitemap.xml
v0.1.1/: index.html  robots.txt  sitemap.xml
v0.1.2/: index.html  robots.txt  sitemap.xml
v0.1.3/: index.html  robots.txt  sitemap.xml
v0.1.4/: index.html  robots.txt  sitemap.xml
v0.1.5/: index.html  robots.txt  sitemap.xml  style.css
v0.1.6/: index.html  robots.txt  sitemap.xml
v0.1.7/: index.html  robots.txt  sitemap.xml
v0.2.0/: index.html  robots.txt  sitemap.xml
v0.2.1/: index.html  robots.txt  sitemap.xml
v0.2.3/: index.html  robots.txt  sitemap.xml
v0.3.0/: index.html  robots.txt  sitemap.xml
v0.3.1/: index.html  robots.txt  sitemap.xml
v0.3.2/: index.html  robots.txt  sitemap.xml
(+454 files in other folders)
