[package]
name = "mlsh-cli"
version = "0.3.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "mlsh"
path = "src/main.rs"

[features]
control-plane = [
    "dep:axum",
    "dep:sqlx",
    "dep:rust-embed",
]

[dependencies]
# CLI framework
clap = { version = "4.6", features = ["derive", "cargo", "env"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
# Terminal UI
colored = "3.1"
# Configuration
dirs = "6.0"
toml = "1.1"
# Date/time
time = { version = "0.3", features = ["formatting", "parsing"] }
# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "signal", "net", "io-util", "process"] }
tokio-util = "0.7"
# QUIC transport (ADR-011) — prefer-post-quantum enables X25519Kyber768 via aws-lc-rs
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "prefer-post-quantum", "logging", "std", "tls12"] }
rustls-pemfile = "2"
# Shared crypto (deterministic keypair, provisioning encryption)
mlsh-crypto = { path = "../mlsh-crypto" }
# Shared protocol types and framing
mlsh-protocol = { path = "../mlsh-protocol" }
# TUN device for overlay network
tun-rs = { version = "2", features = ["async"] }
# Local IP address discovery (for candidate gathering)
local-ip-address = "0.6"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
# Base64 encoding for invite payloads
base64 = "0.22"
# TLS over relay stream for E2E encryption
tokio-rustls = "0.26"
# Self-signed cert bootstrap for ingress TLS termination
rcgen = { version = "0.14", features = ["pem"] }
# ACME client for Let's Encrypt HTTP-01
instant-acme = "0.8"
# HTTP client for cloud API (device flow, cluster creation)
ureq = { version = "3", features = ["json"] }
# Username detection
whoami = "2"
# Cross-platform interface/address change notifications.
if-watch = { version = "3", features = ["tokio"] }

[target.'cfg(unix)'.dependencies]
# Unix process management
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# D-Bus for systemd-resolved DNS integration
zbus = { version = "5", default-features = false, features = ["tokio"] }

[target.'cfg(target_os = "macos")'.dependencies]
# SCDynamicStore for split DNS + search domain integration
system-configuration-sys = "0.6"
core-foundation = "0.10"
core-foundation-sys = "0.8"

# control-plane feature deps (optional)
axum = { version = "0.8", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }
rust-embed = { version = "8", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
