[package]
name = "mlsh-cli"
version = "0.3.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "mlsh"
path = "src/main.rs"

[features]
control-plane = [
    "dep:axum",
    "dep:sqlx",
    "dep:rust-embed",
    "dep:argon2",
    "dep:aes-gcm",
    "dep:rand",
    "dep:hmac",
    "dep:sha2",
    "dep:jsonwebtoken",
    "dep:totp-rs",
    "dep:webauthn-rs",
    "dep:url",
    "dep:ed25519-dalek",
]

[dependencies]
# CLI framework
clap = { version = "4.6", features = ["derive", "cargo", "env"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
# Error handling
anyhow = "1.0"
# Terminal UI
colored = "3.1"
# Configuration
dirs = "6.0"
toml = "1.1"
# Date/time
time = { version = "0.3", features = ["formatting", "parsing"] }
# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "signal", "net", "io-util", "process"] }
tokio-util = "0.7"
# QUIC transport (ADR-011) — prefer-post-quantum enables X25519Kyber768 via aws-lc-rs
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "prefer-post-quantum", "logging", "std", "tls12"] }
rustls-pemfile = "2"
# Shared crypto (deterministic keypair, provisioning encryption)
mlsh-crypto = { path = "../mlsh-crypto" }
# Shared protocol types and framing
mlsh-protocol = { path = "../mlsh-protocol" }
# TUN device for overlay network
tun-rs = { version = "2", features = ["async"] }
# Local IP address discovery (for candidate gathering)
local-ip-address = "0.6"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
# Base64 encoding for invite payloads
base64 = "0.22"
# TLS over relay stream for E2E encryption
tokio-rustls = "0.26"
# Self-signed cert bootstrap for ingress TLS termination
rcgen = { version = "0.14", features = ["pem"] }
# ACME client for Let's Encrypt HTTP-01
instant-acme = "0.8"
# HTTP client for cloud API (device flow, cluster creation)
ureq = { version = "3", features = ["json"] }
# Username detection
whoami = "2"
# Hidden password prompts during `mlsh setup`
rpassword = "7"
# UUID v4 for node identifiers
uuid = { version = "1", features = ["v4"] }
# Cross-platform interface/address change notifications.
if-watch = { version = "3", features = ["tokio"] }

# control-plane feature deps (optional)
axum = { version = "0.8", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }
rust-embed = { version = "8", optional = true }
argon2 = { version = "0.5", optional = true }
aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
jsonwebtoken = { version = "9", optional = true }
totp-rs = { version = "5", default-features = false, features = ["gen_secret", "otpauth"], optional = true }
webauthn-rs = { version = "0.5", optional = true }
url = { version = "2", optional = true }
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core", "pem"], optional = true }

[target.'cfg(unix)'.dependencies]
# Unix process management
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# D-Bus for systemd-resolved DNS integration
zbus = { version = "5", default-features = false, features = ["tokio"] }

[target.'cfg(target_os = "macos")'.dependencies]
# SCDynamicStore for split DNS + search domain integration
system-configuration-sys = "0.6"
core-foundation = "0.10"
core-foundation-sys = "0.8"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core", "pem"] }
tower = { version = "0.5", features = ["util"] }
