[package]
name = "mlsh-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "io-util"] }
