[workspace]

[package]
name = "mlsh-e2e"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "mlsh-e2e"
path = "src/bin/mlsh_e2e.rs"

[[bin]]
name = "mlsh-e2e-cleanup"
path = "src/bin/cleanup.rs"

[[example]]
name = "boot_alpine"
path = "examples/boot_alpine.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["signal", "process"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
which = "6"
